--- a/public/css/style.css
+++ b/public/css/style.css
@@ -336,14 +336,14 @@ body {
     color: #fff;
     font-weight: 400;
     transform: translateY(50%); }
-  .home__location, .home__rooms {
+  .home__location{
     margin-top: 2.5rem; }
-  .home__location, .home__rooms, .home__area, .home__price {
+  .home__location{
     font-size: 1.5rem;
     margin-left: 2rem;
     display: flex;
     align-items: center; }
-    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+    .home__location svg{
       fill: #c69963;
       height: 2rem;
       width: 2rem;
@@ -441,3 +441,4 @@ body {
   margin-left: auto;
   text-align: center;
   width: 70%; }
+
