--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,8 @@
 		<link href="{{ asset ('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')}}">
 		<link href="{{ asset ('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i')}}" rel="stylesheet">
 		<link href="{{ asset ('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css')}}">
+		<link href="{{ asset ('https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js')}}">
+		<script src="{{ asset ('script/script.js')}}"></script>
 		<link rel="stylesheet" href="{{ asset ('css/style.css')}}">
 
 
@@ -18,7 +20,7 @@
 		<body class="container">
 			<div class="sidebar">
 				<button class="nav-btn"></button>
-			</div>
+		
 			<header class="header">
 
 				<h3 class="heading-3">Bienvenue chez</h3>
@@ -52,7 +54,7 @@
 
 				<div class="feature">
 					<svg class="feature__icon">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-')}}"></use>
+						<use xlink:href="{{ asset ('img/sprite.svg#icon-taste')}}"></use>
 					</svg>
 					<h4 class="heading-4 heading-4--dark">Tous tes les saveurs à portée de mains</h4>
 					<p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.</p>
@@ -60,7 +62,7 @@
 
 				<div class="feature">
 					<svg class="feature__icon">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-')}}"></use>
+						<use xlink:href="{{ asset ('img/sprite.svg#icon-body')}}"></use>
 					</svg>
 					<h4 class="heading-4 heading-4--dark">Pour un corps sain dans un esprit sain</h4>
 					<p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -68,7 +70,7 @@
 
 				<div class="feature">
 					<svg class="feature__icon">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-')}}"></use>
+						<use xlink:href="{{ asset ('img/sprite.svg#icon-win')}}"></use>
 					</svg>
 					<h4 class="heading-4 heading-4--dark">99% de clients satisfaits</h4>
 					<p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
@@ -76,7 +78,7 @@
 
 				<div class="feature">
 					<svg class="feature__icon">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-lock')}}"></use>
+						<use xlink:href="{{ asset ('img/sprite.svg#icon-safe')}}"></use>
 					</svg>
 					<h4 class="heading-4 heading-4--dark">Paiements sécurisés</h4>
 					<p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
@@ -99,207 +101,50 @@
 
 			<section class="homes">
 				<div class="home">
-					<img src="{{ asset ('img/oil-1.jpeg')}}" alt="House 1" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
+					<img src="{{ asset ('img/oil-1.jpeg')}}" alt="huile-1" class="home__img">
 					<h5 class="home__name">Lorem</h5>
 					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
-						<p>Lorem</p>
-					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
-						<p>Lorem</p>
-					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>Lorem<sup>Lorem</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-three')}}"></use>
-						</svg>
-						<p>Lorem</p>
-					</div>
-					<button class="btn home__btn">Voir le produit</button>
-				</div>
-
-
-				<div class="home">
-					<img src="{{ asset ('img/oil-2.jpeg')}}" alt="House 2" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
-					<h5 class="home__name">lorem
-					</h5>
-					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
-						<p>lorem</p>
-					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
-						<p>lorem</p>
-					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>lorem<sup>lorem</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-key')}}"></use>
-						</svg>
 						<p>lorem</p>
 					</div>
 					<button class="btn home__btn">Voir le produit</button>
 				</div>
-
 				<div class="home">
-					<img src="{{ asset ('img/oil-3.jpeg')}}" alt="House 3" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
+					<img src="{{ asset ('img/oil-2.jpeg')}}" alt="huile-2" class="home__img">
 					<h5 class="home__name">lorem</h5>
 					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
 						<p>lorem</p>
 					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
+					<button class="btn home__btn">Voir le produit</button>
+				</div>
+				<div class="home">
+					<img src="{{ asset ('img/oil-3.jpeg')}}" alt="huile-3" class="home__img">
+					<h5 class="home__name">lorem</h5>
+					<div class="home__location">
 						<p>lorem</p>
 					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>lorem<sup>lorem</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-key')}}"></use>
-						</svg>
-						<p>$850,000</p>
+					<button class="btn home__btn">Voir le produit</button>
+				</div>
+				<div class="home">
+					<img src="{{ asset ('img/oil-5.jpeg')}}" alt="huile-5" class="home__img">
+					<h5 class="home__name">lorem</h5>
+					<div class="home__location">
+						<p>lorem</p>
 					</div>
 					<button class="btn home__btn">Voir le produit</button>
 				</div>
-
 				<div class="home">
-					<img src="{{ asset ('img/oil-4.jpeg')}}" alt="House 4" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
-					<h5 class="home__name">Large Rustical Villa</h5>
+					<img src="{{ asset ('img/oil-5.jpeg')}}" alt="huile-5" class="home__img">
+					<h5 class="home__name">lorem</h5>
 					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
-						<p>Portugal</p>
-					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
-						<p>6 rooms</p>
-					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>480 m<sup>2</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-key')}}"></use>
-						</svg>
-						<p>$1,950,000</p>
+						<p>lorem</p>
 					</div>
 					<button class="btn home__btn">Voir le produit</button>
 				</div>
-
 				<div class="home">
-					<img src="{{ asset ('img/oil-5.jpeg')}}" alt="House 5" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
-					<h5 class="home__name">Majestic Palace House</h5>
+					<img src="{{ asset ('img/oil-6.jpeg')}}" alt="huile-6" class="home__img">
+					<h5 class="home__name">lorem</h5>
 					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
-						<p>Germany</p>
-					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
-						<p>18 rooms</p>
-					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>4230 m<sup>2</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-key')}}"></use>
-						</svg>
-						<p>$9,500,000</p>
-					</div>
-					<button class="btn home__btn">Voir le produit</button>
-				</div>
-
-				<div class="home">
-					<img src="{{ asset ('img/oil-6.jpeg')}}" alt="House 6" class="home__img">
-					<svg class="home__like">
-						<use xlink:href="{{ asset ('img/sprite.svg#icon-heart-full')}}"></use>
-					</svg>
-					<h5 class="home__name">Modern Familiy Apartment</h5>
-					<div class="home__location">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-map-pin')}}"></use>
-						</svg>
-						<p>Italy</p>
-					</div>
-					<div class="home__rooms">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-profile-male')}}"></use>
-						</svg>
-						<p>3 rooms</p>
-					</div>
-					<div class="home__area">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-expand')}}"></use>
-						</svg>
-						<p>180 m<sup>2</sup>
-						</p>
-					</div>
-					<div class="home__price">
-						<svg>
-							<use xlink:href="{{ asset ('img/sprite.svg#icon-key')}}"></use>
-						</svg>
-						<p>$600,000</p>
+						<p>lorem</p>
 					</div>
 					<button class="btn home__btn">Voir le produit</button>
 				</div>
@@ -344,5 +189,6 @@
 				</p>
 			</footer>
 		{% endblock %}
+
 	</body>
 </html>
