modif form register

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -441,3 +441,13 @@ body {
   margin-left: auto;
   text-align: center;
   width: 70%; }
+
+  .test{
+    color: red;
+  }
+
+  /*****/
+
+  .username{
+    color: red;
+  }
