--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,8 +19,11 @@
 	{% block header %}
 		<body class="container">
 			<div class="sidebar">
-				<button class="nav-btn"></button>
-		
+            <button class="nav-btn"></button>
+        </div>
+				
+			</div>
+
 			<header class="header">
 
 				<h3 class="heading-3">Bienvenue chez</h3>
@@ -189,6 +192,5 @@
 				</p>
 			</footer>
 		{% endblock %}
-
 	</body>
-</html>
+</html></body></html>
