page produit et panier fonctionnel

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,6 +1,18 @@
 <!--  extends 'base.html.twig' a remettre -->
 
-{% block title %}Hello PanierController!{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            {% block title %}Welcome!
+            {% endblock %}
+        </title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous"/>
+        {% endblock %}
+    </head>
 
 {% block body %}
 
@@ -28,8 +40,8 @@
                         <td>{{ item.produits.image }}</td>
                         <td>{{ item.produits.description }}</td>
                         <td>{{ item.produits.prix }}</td>
-                        <td>{{ item.produits.quantity }}</td>
-                        <td>{{ item.produits.prix * item.produits.quantity }} }}</td>
+                        <td>{{ item.quantity }}</td>
+                        <td>{{ item.produits.prix * item.quantity }}</td>
                         <td>
                             <a href="{{ path('panier_subtract', {'id': item.produits.id}) }}" class="btn">Enlever un article</a>
                         </td>
@@ -54,3 +66,4 @@
     {% endif %}
 
 {% endblock %}
+</html>
