--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -13,7 +13,7 @@
                     <h2>
                         {{ produits.nom }}
                         -
-                        {{ produits.image }}
+                        {{ produits.prix }}
                         €
                     </h2>
                     <img class="img-fluid rounded" src="{{ produits.image }}" alt="Image de {{ produits.nom }}">
